<resources>
    <string name="app_name">4WD Bluetooth Car</string>
    <string name="switch_start">"start "</string>
    <string name="CBox_auto">Auto Drive</string>
    <string name="CBox_hor_acc">H_accelerometer</string>
    <string name="CBox_ver_acc">V_accelerometer</string>
    <string name="one_hand_btn">One Hand Mode</string>
    <string name="joyStick_btn">JoyStick Mode</string>
    <string name="break_btn">_____</string>
    <string name="line_track">Line Track</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_track">Send</string>
</resources>
