<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softwaresolutions.a4wdbluetoothcar.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/app_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/switch_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_start" />

        <Spinner
            android:id="@+id/spinner_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:id="@+id/CBox_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_start"
            android:text="@string/CBox_auto"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/CBox_hor_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/CBox_auto"
            android:text="@string/CBox_hor_acc" />

        <CheckBox
            android:id="@+id/CBox_ver_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/CBox_auto"
            android:text="@string/CBox_ver_acc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/CBox_hor_acc"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/left_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/left_btn_background_image_selector" />

                    <Button
                        android:id="@+id/right_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/right_btn_background_image_selector" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/one_hand_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/one_hand_btn"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/break_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/break_btn"
                        android:textAllCaps="false" />

                </RelativeLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/gears_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/gear_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <RadioButton
                    android:id="@+id/gear_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <RadioButton
                    android:id="@+id/gear_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <RadioButton
                    android:id="@+id/gear_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/gear_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/up_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/up_btn_background_image_selector" />

                <Button
                    android:id="@+id/down_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/down_btn_background_image_selector" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
